Finishing up everything except for from web section

--- a/css/style.css
+++ b/css/style.css
@@ -139,6 +139,10 @@
   font-size: 12px;
 }
 
+.topic{
+  font-size: 16px;
+}
+
 .web-entry {
   border: 1px solid #9E9E9E;
   box-shadow: 0px 1px 1px #888888;
